# CS-698-2

install/tb_worlds/share/tb_worlds/: package.dsv  package.ps1  package.sh
install/tb_worlds/share/tb_worlds/launch/: simulation_launch.py
install/turtlebot3-simulation/share/turtlebot3-simulation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3-simulation/share/turtlebot3-simulation/models/bench/: model.sdf
install/turtlebot3-simulation/share/turtlebot3-simulation/models/object_book/: model.config  model.sdf
install/turtlebot3-simulation/share/turtlebot3-simulation/worlds/: custom_maze.world
install/turtlebot_simulation/share/turtlebot_simulation/: package.bash  package.zsh
src/install/turtlebot3-simulation/share/turtlebot3-simulation/: package.bash  package.zsh
src/object_detection_pkg/config/: object_detection_params.yaml
src/object_detection_pkg/launch/: object_detection_launch.py
src/object_detection_pkg/object_detection_pkg/: object_detection_node.py  qdrant_database.py
src/turtlebot_simulation/: CMakeLists.txt  package.xml
src/turtlebot_simulation/launch/: simulation_launch.py
src/turtlebot_simulation/models/bench/: model.config  model.sdf
src/turtlebot_simulation/models/bottle/: model.config  model.sdf
src/turtlebot_simulation/models/object_book/: model.config  model.sdf
src/turtlebot_simulation/models/object_laptop/: model.config  model.sdf
src/turtlebot_simulation/models/turtlebot3_burger/: model.config  model.sdf
src/turtlebot_simulation/worlds/: custom_maze.world
