<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_simulation</name>
  <version>0.1.0</version>
  <description>Simulation environment for TurtleBot3 with objects.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
